--- a/src/styles/leaderboard.css
+++ b/src/styles/leaderboard.css
@@ -4,6 +4,7 @@
     width: 100%;
     min-height: 100vh;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
@@ -19,6 +20,7 @@
     padding: 50px;
     border: 1px solid white;
 }
+
 
 
 .scoreboard h1{
@@ -51,3 +53,18 @@
     padding: 10px;
 }
 
+
+.leaderboard .home-button{
+    margin-top: 5vh;
+    width: 70px;
+    height: 50px;
+    font-weight: 900;
+    background-color: #de0029;
+    color: white;
+    font-size: 20px;
+}
+
+
+.leaderboard .home-button:active{
+    background-color: #00aa9f;
+}
