--- a/src/styles/loading.css
+++ b/src/styles/loading.css
@@ -1,6 +1,8 @@
 
 .loading {
-    animation: loading 1.4s infinite alternate;
+    color: white;
+    font-size: 10vw;
+    animation: loading 0.7s infinite alternate;
 }
 
 @keyframes loading {
