--- a/src/styles/leaderboard.css
+++ b/src/styles/leaderboard.css
@@ -32,6 +32,7 @@
     width: 100%;
     text-align: center;
     font-weight: 900;
+    font-size: larger;
 }
 
 .scoreboard th{
@@ -67,4 +68,13 @@
 
 .leaderboard .home-button:active{
     background-color: #00aa9f;
+}
+
+@media only screen and (max-width:600px) {
+
+    .leaderboard{
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+
 }
